--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+ 
+ <!-- Permissions for accessing internet and external storage -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    
+    <!-- Permissions for devices with Android 10 and higher -->
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" android:required="false" />
+
+    <!-- Optional: Permissions for phone state (if using phone authentication) -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <application
-        android:label="vividdrive"
+        android:label="Vivid Drive"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
