--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,15 +23,18 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.vividdrive"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
-    }
+    // Specify your unique Application ID
+    applicationId "com.example.vividdrive"
+
+    // Configure SDK versions
+    minSdkVersion 23
+    targetSdkVersion flutter.targetSdkVersion
+    compileSdkVersion flutter.compileSdkVersion
+
+    // Set versioning
+    versionCode flutter.versionCode
+    versionName flutter.versionName
+}
 
     buildTypes {
         release {
