--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
  
  <!-- Permissions for accessing internet and external storage -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA" />
+   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
+
     
     <!-- Permissions for devices with Android 10 and higher -->
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" android:required="false" />
@@ -12,6 +13,8 @@
     <!-- Optional: Permissions for phone state (if using phone authentication) -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <application
+   android:requestLegacyExternalStorage="true" 
+
         android:label="Vivid Drive"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
