--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.5.0
   cloud_firestore: ^5.6.4
   photo_manager: ^3.6.4
+  file_picker: ^9.0.2
   
 dev_dependencies:
   flutter_test:
