android bug fixed

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,13 @@
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+# JVM arguments for Gradle build process
+org.gradle.jvmargs=-Xmx4096M -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# Enable AndroidX and Jetifier (for backward compatibility with old support libraries)
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Disable Gradle daemon (can help with low memory issues)
+org.gradle.daemon=false
+
+# Enable Gradle caching and limit cache size
+org.gradle.caching=true
+org.gradle.cache-size-mb=512
