--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cloud_firestore: ^5.6.4
   photo_manager: ^3.6.4
   file_picker: ^9.0.2
+  firebase_storage: ^12.4.4
+  crypto: ^3.0.6
   
 dev_dependencies:
   flutter_test:
